tests/machine/x/cpp/map_membership.mochi.error
line 14: ../../../tests/machine/x/cpp/map_membership.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/map_membership.mochi.cpp:14:26: error: request for member ‘begin’ in ‘"a"’, which is of non-class type ‘const char [2]’
   14 |     print((std::find("a".begin(), "a".end(), m) != "a".end()));
      |                          ^~~~~
../../../tests/machine/x/cpp/map_membership.mochi.cpp:14:39: error: request for member ‘end’ in ‘"a"’, which is of non-class type ‘const char [2]’
   14 |     print((std::find("a".begin(), "a".end(), m) != "a".end()));
      |                                       ^~~
../../../tests/machine/x/cpp/map_membership.mochi.cpp:14:56: error: request for member ‘end’ in ‘"a"’, which is of non-class type ‘const char [2]’
   14 |     print((std::find("a".begin(), "a".end(), m) != "a".end()));
      |                                                        ^~~
../../../tests/machine/x/cpp/map_membership.mochi.cpp:15:26: error: request for member ‘begin’ in ‘"c"’, which is of non-class type ‘const char [2]’
   15 |     print((std::find("c".begin(), "c".end(), m) != "c".end()));
      |                          ^~~~~
../../../tests/machine/x/cpp/map_membership.mochi.cpp:15:39: error: request for member ‘end’ in ‘"c"’, which is of non-class type ‘const char [2]’
   15 |     print((std::find("c".begin(), "c".end(), m) != "c".end()));
      |                                       ^~~
../../../tests/machine/x/cpp/map_membership.mochi.cpp:15:56: error: request for member ‘end’ in ‘"c"’, which is of non-class type ‘const char [2]’
   15 |     print((std::find("c".begin(), "c".end(), m) != "c".end()));
      |                                                        ^~~

 13 |     auto m = std::unordered_map<std::string,int>{{"a", 1}, {"b", 2}};
 14 |     print((std::find("a".begin(), "a".end(), m) != "a".end()));
 15 |     print((std::find("c".begin(), "c".end(), m) != "c".end()));
